Testing horizontal scroll bar fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
 /*"C:\Users\artis\AppData\Local\Programs\Python\Python38\python.exe" src\scripts\build_site.py*/
 html, body {
     width: 100%;
+    overflow-x: hidden;
 }
 
 html {
